# rss-cli

./: Cargo.toml  README.md  feeds.json
.github/workflows/: ci.yml  release.yml
src/: db.rs  feed.rs  main.rs  render.rs
src/tui/: input.rs  mod.rs  state.rs  ui.rs
